edit leave detail

--- a/src/pages/leave-detail/leave-detail.html
+++ b/src/pages/leave-detail/leave-detail.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-grid>
-       <ion-row>
+       <!--<ion-row>
          <ion-col text-right>วันพุธ ที่ 14 มิถุนายน 2560</ion-col>
        </ion-row>
        <ion-row>
@@ -23,6 +23,6 @@
        </ion-row>
        <ion-row>
          <ion-col text-left>ตั้งแต่วันที่ {{leaveDetail.leaveStartDateTime | date}} ถึง {{leaveDetail.leaveEndDateTime | date}}  รวม {{leaveDetail.leaveDay}} วัน</ion-col>
-       </ion-row>
+       </ion-row>-->
   </ion-grid>
 </ion-content>
