--- a/src/pages/leave/leave.html
+++ b/src/pages/leave/leave.html
@@ -31,7 +31,10 @@
                 <ion-select [(ngModel)]="leaveData.leaveType" interface="popover">
                     <ion-option value="Sick Leave">Sick Leave</ion-option>
                     <ion-option value="Personal Leave">Personal Leave</ion-option>
-                    <ion-option value="Annual Leave">Annual Leave</ion-option>
+                    <ion-option value="Vacation">Vacation</ion-option>
+                    <ion-option value="Militiary Service Leave">Militiary Service Leave</ion-option>
+                    <ion-option value="Maternity Leave">Maternity Leave</ion-option>
+                    <ion-option value="Ordination Leave">Ordination Leave</ion-option>
                 </ion-select>
             </ion-item>
         </ion-row>
