--- a/src/pages/leavelist/leavelist.html
+++ b/src/pages/leavelist/leavelist.html
@@ -1,19 +1,21 @@
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>Leave List</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>Leave List</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let leave of leavelist" (click)="editLeave(leave)">
-      <ion-icon name="calendar" item-left></ion-icon>
-      <b class="thaifont">{{ leave.leaveType }}</b>
-      <ion-note><p class="thaifont">{{ leave.leaveStartDateTime | date: "dd MMM yyyy"}} - {{ leave.leaveEndDateTime | date: "dd MMM yyyy"}}</p></ion-note>
-      <p class="thaifont">{{ leave.remark }}</p>
-    </ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item *ngFor="let leave of leavelist" (click)="editLeave(leave)">
+            <ion-icon name="calendar" item-left></ion-icon>
+            <b class="thaifont">{{ leave.leaveType }}</b>
+            <ion-note>
+                <p class="thaifont">{{ leave.leaveStartDateTime | date: "dd MMM yyyy"}} - {{ leave.leaveEndDateTime | date: "dd MMM yyyy"}}</p>
+            </ion-note>
+            <p class="thaifont">{{ leave.remark }}</p>
+        </ion-item>
+    </ion-list>
 </ion-content>
