--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -26,6 +26,12 @@
                 <img (press)="openPage_stampDetail()" src="img/fingerprint.png" fgprintImg>
             </ion-col>
         </ion-row>
+        <ion-row>
+            <ion-col col-12 text-center>
+                <ion-icon name="md-arrow-dropright-circle" iconinList1></ion-icon>{{dataToday.dateTimeIn | date: "shortTime"}}
+                <ion-icon name="md-arrow-dropleft-circle" iconinList2></ion-icon>{{dataToday.dateTimeOut | date: "shortTime"}}
+            </ion-col>
+        </ion-row>
     </ion-grid>
 </ion-content>
 
