--- a/src/pages/leave-detail/leave-detail.html
+++ b/src/pages/leave-detail/leave-detail.html
@@ -10,7 +10,7 @@
 <ion-content>
     <ion-grid>
         <ion-row>
-            <ion-col text-right>วันที่ {{leaveDetail.created | date: "dd MMM yyyy"}}</ion-col>
+            <ion-col text-right>{{leaveDetail.created}}</ion-col>
         </ion-row>
         <ion-row>
             <ion-col text-left>เรียน ฝ่ายบุคลที่เคารพ</ion-col>
@@ -19,10 +19,13 @@
             <ion-col text-left>ข้าพเจ้า {{userDetail.firstname}} {{userDetail.lastname}}</ion-col>
         </ion-row>
         <ion-row>
-            <ion-col text-left>มีความประสงค์ขอลา {{leaveDetail.leaveType}}</ion-col>
+            <ion-col text-left>มีความประสงค์ขอ {{leaveDetail.leaveType}}</ion-col>
         </ion-row>
         <ion-row>
-            <ion-col text-left>ตั้งแต่วันที่ {{leaveDetail.leaveStartDateTime | date: "dd MMM yyyy"}} ถึง {{leaveDetail.leaveEndDateTime | date: "dd MMM yyyy"}} รวม {{leaveDetail.leaveDay}} วัน</ion-col>
+            <ion-col text-left>ตั้งแต่วันที่ {{leaveDetail.leaveStartDateTime}} ถึง {{leaveDetail.leaveEndDateTime}} </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col text-left> รวม {{leaveDetail.leaveDay}} วัน </ion-col>
         </ion-row>
     </ion-grid>
 </ion-content>
