--- a/src/pages/request/request.html
+++ b/src/pages/request/request.html
@@ -18,7 +18,9 @@
             </ion-segment-button>
         </ion-segment>
     </div>-->
-
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
     <ion-list>
         <ion-item *ngFor="let leaveLis of leaveList">
             <ion-row rowHeight (click)="viewLeaveDetail(leaveLis)">
@@ -35,7 +37,7 @@
                         </ion-col>
                         <ion-col col-2 text-right>
                             <ion-icon name="md-checkmark-circle" [hidden]="leaveLis.approveStatus != 'Approve'" iconApprove></ion-icon>
-                            <ion-icon name="md-time" [hidden]="leaveLis.approveStatus != 'Waitting'" iconWait></ion-icon>
+                            <ion-icon name="md-time" [hidden]="leaveLis.approveStatus != 'Waiting'" iconWait></ion-icon>
                             <ion-icon name="md-close-circle" [hidden]="leaveLis.approveStatus != 'Reject'" iconReject></ion-icon>
                         </ion-col>
                     </ion-row>
