Mick last push 16/6/60

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -27,8 +27,8 @@
         </ion-row>
         <ion-row>
             <ion-col width-100 text-wrap>
-                <p thaifont>{{empDetail.office.name}}</p>
-                <p thaifont>{{empDetail.office.address.address}} {{empDetail.office.address.district}} {{empDetail.office.address.subdistrict}} {{empDetail.office.address.province}} {{empDetail.office.address.country}} {{empDetail.office.address.postcode}}</p>
+                <p thaifont>{{empDetail.company.name}}</p>
+                <p thaifont>{{empDetail.company.address.address}} {{empDetail.company.address.district}} {{empDetail.company.address.subdistrict}} {{empDetail.company.address.province}} {{empDetail.company.address.country.th}} {{empDetail.company.address.postcode}}</p>
             </ion-col>
         </ion-row>
     </ion-grid>
