--- a/src/pages/leave-detail/leave-detail.html
+++ b/src/pages/leave-detail/leave-detail.html
@@ -8,8 +8,88 @@
 
 
 <ion-content>
-    <ion-grid>
+    <ion-grid no-padding>
+        <ion-row topRow>
+            <ion-item>
+                <p class="fontbold" style="color:black;">Leave Type :
+                    <span class="fontbold" style="color:black;">{{leaveDetail.leaveType}}</span></p>
+
+            </ion-item>
+        </ion-row>
         <ion-row>
+            <ion-col col-12>
+                <p class="fontbold">Remark</p>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-12 colcenter>
+                <p class="fontbold" style="color:black;" padding-left>{{leaveDetail.remark}}</p>
+            </ion-col>
+        </ion-row>
+        <ion-row padding-top>
+            <ion-col col-6 class="fontbold">From :</ion-col>
+            <ion-col col-6 class="fontbold">To :</ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-6>
+                <ion-item style="padding:0%">
+                    <ion-input type="text" text-center value="{{leaveDetail.leaveStartDateTime | date: 'dd MMM yyyy'}}" disabled="true"></ion-input>
+                </ion-item>
+            </ion-col>
+
+            <ion-col col-6>
+                <ion-item style="padding:0%">
+                    <ion-input type="text" text-center value="{{leaveDetail.leaveEndDateTime | date: 'dd MMM yyyy'}}" disabled="true"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+
+        <ion-row [hidden]="!leaveDetail.leaveHalf">
+            <ion-col col-12>
+                <ion-list no-line>
+                    <ion-row>
+                        <ion-col col-12 text-left>
+                            <p class="fontbold" style="color:black;">Half-Day</p>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col col-4>
+                        </ion-col>
+                        <ion-col col-2 text-center>
+                            <ion-item style="padding:0%">
+                                <ion-input type="tel" text-center [(ngModel)]="leaveDetail.leaveTime" disabled="true"></ion-input>
+                            </ion-item>
+                        </ion-col>
+                        <ion-col col-2>
+                            <p class="thaifont" text-left>Hour(s)</p>
+                        </ion-col>
+                        <ion-col col-4>
+                        </ion-col>
+                    </ion-row>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+
+        <ion-row [hidden]="leaveDetail.leaveHalf">
+            <ion-col col-12>
+                <ion-list no-line>
+                    <ion-row>
+                        <ion-col col-5>
+                            <p class="thaifont" style="text-align:right">Total leave : </p>
+                        </ion-col>
+                        <ion-col col-2 text-center>
+                            <ion-input type="tel" text-center [(ngModel)]="leaveDetail.leaveDay" disabled="true"></ion-input>
+                        </ion-col>
+                        <ion-col col-5>
+                            <p class="thaifont" text-left>days</p>
+                        </ion-col>
+                    </ion-row>
+                </ion-list>
+                <hr blankRow/>
+            </ion-col>
+        </ion-row>
+        <!--</ion-grid>-->
+        <!--<ion-row>
             <ion-col text-right>{{leaveDetail.created}}</ion-col>
         </ion-row>
         <ion-row>
@@ -26,6 +106,6 @@
         </ion-row>
         <ion-row>
             <ion-col text-left> รวม {{leaveDetail.leaveDay}} วัน </ion-col>
-        </ion-row>
+        </ion-row>-->
     </ion-grid>
 </ion-content>
