Mick Update Function 22/6/60

--- a/src/pages/leave-detail/leave-detail.html
+++ b/src/pages/leave-detail/leave-detail.html
@@ -12,7 +12,7 @@
         <ion-row topRow>
             <ion-item>
                 <p class="fontbold" style="color:black;">Leave Type :
-                    <span class="fontnor" style="color:black;">{{leaveDetail.leaveType}}</span></p>
+                    <span class="fontnor" style="color:grey;" text-center>{{leaveDetail.leaveType}}</span></p>
 
             </ion-item>
         </ion-row>
@@ -23,7 +23,7 @@
         </ion-row>
         <ion-row>
             <ion-col col-12 colcenter>
-                <p class="fontnor" style="color:black;" padding-left>{{leaveDetail.remark}}</p>
+                <p class="fontnor" style="color:gray;" padding-left>{{leaveDetail.remark}}</p>
             </ion-col>
         </ion-row>
         <ion-row padding-top>
@@ -61,7 +61,7 @@
                             </ion-item>
                         </ion-col>
                         <ion-col col-2>
-                            <p class="thaifont" text-left>Hour(s)</p>
+                            <p class="thaifont" text-left>{{hr}}</p>
                         </ion-col>
                         <ion-col col-4>
                         </ion-col>
