--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,4 +2,5 @@
     <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="md-swap"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="History" tabIcon="paper"></ion-tab>
     <ion-tab [root]="tab3Root" tabTitle="Request" tabIcon="list-box"></ion-tab>
+    <!--<ion-tab [root]="tab3Root" tabTitle="Request" tabIcon="list-box"></ion-tab>-->
 </ion-tabs>
