Mick 22/6/60 Complete function check network

--- a/src/pages/leave-detail/leave-detail.html
+++ b/src/pages/leave-detail/leave-detail.html
@@ -75,37 +75,18 @@
                 <ion-list no-line>
                     <ion-row>
                         <ion-col col-5>
-                            <p class="thaifont" style="text-align:right">Total leave : </p>
+                            <p class="fontbold" style="text-align:right">Total leave : </p>
                         </ion-col>
                         <ion-col col-2 text-center>
                             <ion-input type="tel" text-center [(ngModel)]="leaveDetail.leaveDay" disabled="true"></ion-input>
                         </ion-col>
                         <ion-col col-5>
-                            <p class="thaifont" text-left>days</p>
+                            <p class="fontbold" text-left>days</p>
                         </ion-col>
                     </ion-row>
                 </ion-list>
                 <hr blankRow/>
             </ion-col>
         </ion-row>
-        <!--</ion-grid>-->
-        <!--<ion-row>
-            <ion-col text-right>{{leaveDetail.created}}</ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col text-left>เรียน ฝ่ายบุคลที่เคารพ</ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col text-left>ข้าพเจ้า {{userDetail.firstname}} {{userDetail.lastname}}</ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col text-left>มีความประสงค์ขอ {{leaveDetail.leaveType}}</ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col text-left>ตั้งแต่วันที่ {{leaveDetail.leaveStartDateTime}} ถึง {{leaveDetail.leaveEndDateTime}} </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col text-left> รวม {{leaveDetail.leaveDay}} วัน </ion-col>
-        </ion-row>-->
     </ion-grid>
 </ion-content>
