MIck Last Update Today 23/6/60

--- a/src/pages/leave/leave.html
+++ b/src/pages/leave/leave.html
@@ -100,7 +100,7 @@
 
                         <ion-col col-2 text-center>
                             <ion-item style="padding:0%">
-                                <ion-input type="tel" maxlength="2" text-center [(ngModel)]="leaveData.leaveTime"></ion-input>
+                                <ion-input type="number" maxlength="2" text-center [(ngModel)]="leaveData.leaveTime"></ion-input>
                             </ion-item>
                         </ion-col>
 
