--- a/src/pages/leave-detail/leave-detail.html
+++ b/src/pages/leave-detail/leave-detail.html
@@ -18,12 +18,12 @@
         </ion-row>
         <ion-row>
             <ion-col col-12>
-                <p class="fontbold">Remark</p>
+                <p class="fontbold">Leave Detail</p>
             </ion-col>
         </ion-row>
         <ion-row>
             <ion-col col-12 colcenter>
-                <p class="fontnor" style="color:gray;" padding-left>{{leaveDetail.remark}}</p>
+                <p class="fontnor" style="color:gray;" padding-left>{{leaveDetail.leaveDetail}}</p>
             </ion-col>
         </ion-row>
         <ion-row padding-top>
