Mick update IOS complatible

--- a/src/pages/leave/leave.html
+++ b/src/pages/leave/leave.html
@@ -81,8 +81,8 @@
         </ion-row>
 
         <ion-row>
-            <ion-col col-12>
-                <hr blankRow/>
+            <ion-col col-12 style="height: 5%">
+                <!--<hr blankRow/>-->
             </ion-col>
         </ion-row>
 
