--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons start>
-            <button ion-button icon-only color="royal" (click)="showMenu()">
+            <button ion-button icon-only color="royal" menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button>
         </ion-buttons>
@@ -35,7 +35,6 @@
     </ion-grid>
 </ion-content>
 
-
 <ion-menu [content]="content">
     <ion-header>
         <ion-toolbar>
@@ -61,5 +60,3 @@
         </ion-list>
     </ion-content>
 </ion-menu>
-<!--<ion-nav id="nav" #content [root]="rootPage"></ion-nav>-->
-<ion-nav id="nav" #content></ion-nav>
