Mick update splash and icon on iOS

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -29,7 +29,7 @@
             <ion-item *ngFor="let worklis of workList">
                 <ion-row rowHeight>
                     <ion-col col-2>
-                        <ion-icon name="calendar" iconCalender></ion-icon>
+                        <ion-icon name="calendar" iconCalendar></ion-icon>
                     </ion-col>
                     <ion-col>
                         <ion-row rowHeightspace>
@@ -48,7 +48,7 @@
             <ion-item *ngFor="let leaveLis of leaveList" (click)="openLeaveDetailPage(leaveLis)">
                 <ion-row rowHeight>
                     <ion-col col-2>
-                        <ion-icon name="calendar" iconCalender></ion-icon>
+                        <ion-icon name="calendar" iconCalendar></ion-icon>
                     </ion-col>
                     <ion-col>
                         <ion-row rowHeightspace>
