--- a/src/pages/request/request.html
+++ b/src/pages/request/request.html
@@ -25,7 +25,7 @@
         <ion-item *ngFor="let leaveLis of leaveList">
             <ion-row rowHeight (click)="viewLeaveDetail(leaveLis)">
                 <ion-col col-2>
-                    <ion-icon name="calendar" iconCalender></ion-icon>
+                    <ion-icon name="calendar" iconCalendar></ion-icon>
                 </ion-col>
                 <ion-col>
                     <ion-row rowHeightspace>
