--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -36,20 +36,21 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+
     <ion-grid>
-        <ion-row padding-left>
+        <ion-row padding-left padding-bottom contentRow>
             <img src="img/call.png" iconset>
             <p contentIcon thaifont>{{empDetail.mobile}}</p>
         </ion-row>
-        <ion-row padding-left>
+        <ion-row padding-left padding-bottom contentRow>
             <img src="img/facebook.png" iconset>
             <p contentIcon thaifont>{{empDetail.facebook}}</p>
         </ion-row>
-        <ion-row padding-left>
+        <ion-row padding-left padding-bottom contentRow>
             <img src="img/line.png" iconset>
             <p contentIcon thaifont>{{empDetail.line}}</p>
         </ion-row>
-        <ion-row padding-left>
+        <ion-row padding-left padding-bottom contentRow>
             <img src="img/email.png" iconset>
             <p contentIcon thaifont>{{empDetail.email}}</p>
         </ion-row>
