Mick fix bug iOS

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -19,7 +19,7 @@
                 <ion-list>
                     <ion-item>
                         <ion-avatar item-left>
-                            <img src="{{empDetail.image}}" SetAvatar>
+                            <img src="{{empDetail.image}}">
                         </ion-avatar>
                         <h2 thaifont Headerfont text-wrap text-center>{{empDetail.firstname}} {{empDetail.lastname}}</h2>
                         <p thaifont text-center>{{empDetail.jobTitle}}</p>
