--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,7 +28,7 @@
         </ion-row>
         <ion-row>
             <ion-col text-center>
-                <img (press)="openPage_stampDetail()" src="img/fingerprint.png" fgprintImg>
+                <img (click)="openPage_stampDetail()" src="img/fingerprint.png" fgprintImg>
             </ion-col>
         </ion-row>
         <ion-row padding-top>
